# ChangeLog for dev-vcs/mr
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/mr/ChangeLog,v 1.7 2012/01/07 08:54:46 tove Exp $

*mr-1.10 (07 Jan 2012)

  07 Jan 2012; Torsten Veller <tove@gentoo.org> -mr-1.02.ebuild,
  +mr-1.10.ebuild:
  Version bump. Cleanup

*mr-1.04 (23 Jun 2011)

  23 Jun 2011; Torsten Veller <tove@gentoo.org> -mr-0.50.ebuild,
  -mr-0.51.ebuild, +mr-1.04.ebuild:
  Version bump. Cleanup

*mr-1.02 (22 Jan 2011)

  22 Jan 2011; Torsten Veller <tove@gentoo.org> +mr-1.02.ebuild:
  Version bump

*mr-0.51 (17 Dec 2010)

  17 Dec 2010; Torsten Veller <tove@gentoo.org> -mr-0.49.ebuild,
  +mr-0.51.ebuild:
  Version bump. Cleanup

*mr-0.50 (30 Aug 2010)

  30 Aug 2010; Torsten Veller <tove@gentoo.org> -mr-0.48.ebuild,
  +mr-0.50.ebuild, metadata.xml:
  Version bump. Cleanup. Update longdescription

*mr-0.49 (24 Jul 2010)

  24 Jul 2010; Torsten Veller <tove@gentoo.org> +mr-0.49.ebuild:
  Version bump

  04 Mar 2010; Torsten Veller <tove@gentoo.org> +mr-0.48.ebuild,
  +metadata.xml:
  Move mr from dev-util to dev-vcs

*mr-0.48 (06 Feb 2010)

  06 Feb 2010; Torsten Veller <tove@gentoo.org> -mr-0.45.ebuild,
  +mr-0.48.ebuild:
  Version bump. Cleanup

*mr-0.46 (11 Dec 2009)

  11 Dec 2009; Torsten Veller <tove@gentoo.org> +mr-0.46.ebuild:
  Version bump

*mr-0.45 (09 Dec 2009)

  09 Dec 2009; Torsten Veller <tove@gentoo.org> -mr-0.40.ebuild,
  -mr-0.43.ebuild, -mr-0.44.ebuild, +mr-0.45.ebuild:
  Version bump. Cleanup

*mr-0.44 (26 Nov 2009)

  26 Nov 2009; Torsten Veller <tove@gentoo.org> +mr-0.44.ebuild:
  Version bump

*mr-0.43 (09 Sep 2009)

  09 Sep 2009; Torsten Veller <tove@gentoo.org> +mr-0.43.ebuild:
  Version bump

*mr-0.40 (04 Aug 2009)

  04 Aug 2009; Torsten Veller <tove@gentoo.org> -mr-0.39.ebuild,
  +mr-0.40.ebuild:
  Version bump. Cleanup

*mr-0.39 (26 Mar 2009)

  26 Mar 2009; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +mr-0.39.ebuild:
  Initial commit
