@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST mr_1.04.tar.gz 35927 RMD160 240eb97ed21b27a0211a7b0d8203d123c9d71ccf SHA1 ebb5800ea5090353a0193152270f061f2d83931e SHA256 752ea729cd85c86ef61db88fa2cbcf027fd4e7d18e2e797c4db651d76f4d7725
 DIST mr_1.10.tar.gz 38706 RMD160 7aa4fc58d9684434bd9981a1ab716143e9aeebf7 SHA1 1104a3bd98a31df315fab92636b144f1dc72848d SHA256 ddecda89942130503dfa87d65999bf49090654791eca729ded7dc69c5bdc6a18
+DIST mr_1.11.tar.gz 38900 RMD160 7ad175118f2c4bc9f80e873c3ce1fd7604f78358 SHA1 52f2f3bde2a83c2ac856e8eb6493385d4c40a89f SHA256 10d702fd3e141a5d1ad3c403bfd8536441a7970f2e2ea7528b5129bd9e254655
 EBUILD mr-1.04.ebuild 729 RMD160 f0c837c922fb92599323996c6d16ad1a3047c2aa SHA1 97b2d6305930deb9922bfa2c7955be8dbbe5ceca SHA256 ada76969f7551c739d4d6df6d4575278dccb2ac238c19ab71e0396ac54b5b76e
 EBUILD mr-1.10.ebuild 729 RMD160 237a30c3495e2561e1d80acb4786c9bc9cb07d37 SHA1 79f3a4a5062ad58c0c4279d3d7817ba167167db5 SHA256 3b982bc19bee948598b3dc5d6ac4b08189c30c5afd8893780f863c51871e2a13
-MISC ChangeLog 1978 RMD160 f00b1d74aa92ccbf2ac01dd2a34b407e86b176e4 SHA1 9fefd64fcde4c4eb76ee99f6d10fb10c76120f47 SHA256 c9e58fdab53c4eed669788b7b1426f97eab85eabcd4b611015b5f1f3e959ea88
-MISC metadata.xml 1228 RMD160 0e423630865feab1fdbb62ad96a65fd34e2a101c SHA1 b8b864ec37d79ef87b36622b5e1ed1c40cf65b73 SHA256 2f5eb43bb0f864d510f53fea6e49392ff5d1c493662d9f6b5fb1023ce2df4c94
+EBUILD mr-1.11.ebuild 729 RMD160 a0978a7386045d7191ab8c6b14bffbc96619a45d SHA1 c037383efa3910c57411fc988c8d6357f2afa8ae SHA256 9060a4fd87c4575c3e1a0c6db2060411029dd992494c797e52ef3bbeb4bb6921
+MISC ChangeLog 2097 RMD160 5c2df29fde2051b3a65d99440ba9a17c23f880f7 SHA1 56ccd92237b486083ce76317a69838409cb01131 SHA256 a190352e32b3d3a73ac476d7c120c3398961c03c0831984994a554df80e5e064
+MISC metadata.xml 1314 RMD160 829dbcc61f0eabd545966063bf3cdb8ec87d4d76 SHA1 c4251b744e14a19fcded1fa43c97b823ed0c0c0a SHA256 372bbcb16bb744341fa32edfdb31302fdc3fcb6e35fa03c45a8004c8c0255310
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREIAAYFAk8ICFwACgkQV3J2n04Eauz8xACg1iIaQ4uwfqdd9VKt8wwZttfq
-WeQAoNxYnPdtAcw02PvE3JnR0uhZ3R3R
-=aJhj
+iEYEAREIAAYFAk8/yIUACgkQV3J2n04Eauy21QCfcM7yBhgYO703kQ4+AeB8RzT8
+dlwAnjfiuX1Oi/UHsfNhHP3rKM9gA/bA
+=pt2P
 -----END PGP SIGNATURE-----
