@@ -1,6 +1,11 @@
 # ChangeLog for dev-vcs/mr
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/mr/ChangeLog,v 1.7 2012/01/07 08:54:46 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/mr/ChangeLog,v 1.8 2012/02/18 15:49:20 tove Exp $
+
+*mr-1.11 (18 Feb 2012)
+
+  18 Feb 2012; Torsten Veller <tove@gentoo.org> +mr-1.11.ebuild, metadata.xml:
+  Version bump
 
 *mr-1.10 (07 Jan 2012)
 
